--- a/style.css
+++ b/style.css
@@ -235,11 +235,13 @@ nav {
 }
 
 .btn__menu {
-    display: none;
+    display: none; /* desktop */
     background: transparent;
     border: none;
     transition: all 300ms ease;
+    position: relative;
 }
+
 
 .btn__menu--hover {
     filter: invert(26%) sepia(94%) saturate(7476%) hue-rotate(261deg) brightness(94%) contrast(115%);
@@ -1498,9 +1500,7 @@ MOBILE RESPONSIVENESS ↓
 
 
 @media(max-width: 1280px) {
-    .btn__menu {
-    display: block;
-}
+
     header .row {
         align-items: flex-end;
 }
@@ -1546,22 +1546,22 @@ MOBILE RESPONSIVENESS ↓
   }
 }
 
-@media (max-width: 1024px) {
+@media (max-width: 1024px) { 
 
-    .btn__menu {
-        display: block;
-    }
-    header .row {
-        flex-direction: column;
-        align-items: center;
-    }
-    footer {
-        padding: 80px 32px;
-    }
+.nav__links{
+    display: none;
+    gap: 32px;
+}
+.btn__menu{
+    display: block;
+}
 
-    .nav__links {
-        text-decoration: none;
-    }
+header .row {
+    flex-direction: column;
+    align-items: center;
+}
+footer {
+    padding: 80px 32px;
 }
 
 .header__description,
@@ -1582,7 +1582,7 @@ MOBILE RESPONSIVENESS ↓
     font-size: 30px;
   }
 
-    .header__description--para {
+.header__description--para {
     margin: 20px 0;
   }
 
@@ -1679,6 +1679,16 @@ MOBILE RESPONSIVENESS ↓
   }
 
 @media(max-width: 768px) {
+
+    .plans{
+        flex-direction: column;
+        align-items: center;
+    }
+
+.btn__menu--svg {
+    display: block;
+}
+
 .features {
     justify-content: center;
   }
@@ -1765,33 +1775,36 @@ MOBILE RESPONSIVENESS ↓
 }
 }
 
+
+
 @media(max-width: 640px) {
-    .section__title {
-line-height: 1.25;
-}
+
 .container {
     padding: 80px 0;
 }
+
 .nav__logo {
     margin: 8px 0;
     padding-bottom: 4px;
 }
+
+
 main {
     margin-bottom: 80px;
 }
 }
 .header__email {
-    height: 68px;
+    flex-direction: column;
+    height: auto;
 }
+
 .header__email--input {
     position: static;
     padding: 16px 0;
-    padding-left: 32px;
     line-height: 1.5;
-    height: 68px;
-    position: absolute;
+    text-align: center;
 }
-    .header__email--btn {
+.header__email--btn {
     width: 100%;
     padding: 16px 0;
     margin: 16px 0;
