--- a/style.css
+++ b/style.css
@@ -699,15 +699,17 @@ align-items: center;
 }
 
 .steps__img--wrapper {
-display: center;
+display: flex;
 position: relative;
+align-items: center;
+justify-content: space-between;
 }
 
 
 
 .steps__img {
 z-index: 2;
-height: 50%;
+width: 50%;
 }
 
 .steps__description {
@@ -732,7 +734,6 @@ line-height: 1;
 display: flex;
 flex-direction: column;
 margin-left: 24px;
-max-width: 320px;
 }
 
 .step__title {
@@ -1680,10 +1681,10 @@ footer {
 
 @media(max-width: 768px) {
 
-    .plans{
-        flex-direction: column;
-        align-items: center;
-    }
+.plans{
+    flex-direction: column;
+    align-items: center;
+}
 
 .btn__menu--svg {
     display: block;
@@ -1728,6 +1729,12 @@ footer {
     flex-direction: column;
 }
 
+.header__content{
+    max-width: 100%;
+    align-items: center;
+    justify-content: center;
+}
+
 .step {
         flex-direction: column;
     align-items: center;
@@ -1770,7 +1777,7 @@ footer {
 .footer__socials {
         margin-left: 0px;
 }
-    .footer__social--link:first-child {
+.footer__social--link:first-child {
         margin-left: 0px;
 }
 }
@@ -1804,7 +1811,8 @@ main {
     line-height: 1.5;
     text-align: center;
 }
-.header__email--btn {
+
+.header__email--button {
     width: 100%;
     padding: 16px 0;
     margin: 16px 0;
